--- a/src/site/research/cell-biology/index.njk
+++ b/src/site/research/cell-biology/index.njk
@@ -47,7 +47,7 @@ templateEngineOverride: njk,md
       <p>In this Unit, physicists and chemists work closely together with biologists to elucidate the fundamental rules that govern dynamic cell organisation and function. At the same time, groups are developing new instruments and technologies in order to reach this ambitious goal. <a href="#more">Read more about Cell Biology and Biophysics at EMBL.</a></p>
     </div>
     <div>
-      <img src="/images/cp-avatar.png" class="cp-image-fixed"/>
+      <img src="{{'/images/cp-avatar.png' | url }}" class="cp-image-fixed"/>
       <h4>Jan Ellenberg</h4>
       <p>Head of Cell Biology and Biophysics Unit</p>
     </div>
@@ -58,105 +58,105 @@ templateEngineOverride: njk,md
 <section class="cp-container vf-grid vf-grid__col-3">
     <a href="https://dev.beta.embl.org/groups/cuylen/">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Cuylen Group</h3>
         <p>Cellular phase separation by surfactants</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Deo Group</h3>
         <p>Building next-generation fluorescent tools for biological imaging</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Diz-Muñoz Group</h3>
         <p>Mechanics of cellular signalling</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Ellenberg Group</h3>
         <p>Systems biology of cell division and nuclear organisation</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Häring Group</h3>
         <p>Chromosome structure and dynamics</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Hufnagel Group</h3>
         <p>Dynamics of cell growth and tissue architecture</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Jechlinger Group</h3>
         <p>Mechanisms of oncogene dependence and tumour relapse</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Köhler Group</h3>
         <p>Self-organisation in meiosis</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Kreshuk Group</h3>
         <p>Machine learning for bioimage analysis</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Neveu Group</h3>
         <p>Systems biology of stem cell differentiation</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Pepperkok Team</h3>
         <p>Membrane traffic and organelle biogenesis</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Prevedel Group</h3>
         <p>Advanced optical techniques for deep tissue microscopy</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Ries Group</h3>
         <p>Superresolution microscopy for structural cell biology</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Schultz Group</h3>
         <p>Chemical cell biology</p>
       </div>
     </a>
     <a href="#">
       <div class="cp-card">
-        <img src="/images/grey-box.png"  class="cp-image-responsive"/>
+        <img src="{{'/images/grey-box.png' | url }}"  class="cp-image-responsive"/>
         <h3>Schwab Team</h3>
         <p>Volume correlative light and electron microscopy</p>
       </div>
